multi-tiers-app-networking-setup/vpc.tf
resource "aws_vpc" "VPC1" {
  cidr_block       = "10.10.0.0/16"

  tags = {
    Name = "VPC1"
  }
}

resource "aws_internet_gateway" "VPC1-igw" {
  vpc_id = aws_vpc.VPC1.id

  tags = {
    Name = "VPC1-igw"
  }
}

output "VPC1_id"{
	value = aws_vpc.VPC1.id
}
